--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
       name="description"
       content="Anotheries takes you into memories"
     />
+	  <meta name="author" content="Tai, Tung-En && Hsiao, Yi-Han" />
+    <meta property="og:image" content="https://user-images.githubusercontent.com/33646045/202979282-2e107f2d-14db-4a44-9688-b71605890468.png" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/ogp.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
